# deutero-cli

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
deutero_cli/: __init__.py  auth.py  cli.py  client.py  config.py  output.py
deutero_cli/agent_skill/deutero-research/: SKILL.md
deutero_cli/agent_skill/deutero-research/references/: analysis-and-results.md  generation-and-importing.md  running-studies.md  study-and-question-management.md  webhooks.md
deutero_cli/commands/: analysis.py  auth_cmd.py  config_cmd.py  credits.py  interviews.py  personas.py  projects.py  questions.py  simulate.py  surveys.py  webhooks.py
tests/: conftest.py  test_analysis_cli.py  test_client.py  test_config.py  test_credits_cli.py  test_interviews_cli.py  test_personas_cli.py  test_projects_cli.py  test_questions_cli.py  test_surveys_cli.py  test_surveys_create_update_cli.py  test_webhooks_cli.py
